--- a/RSS_data.ipynb
+++ b/RSS_data.ipynb
@@ -5,17 +5,31 @@
    "execution_count": 8,
    "id": "bc4938d1-4995-4e06-889f-51e9bb7a2e2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'IncompatibleBrokerVersion' from 'kafka.errors' (c:\\Users\\anton\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\kafka\\errors.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkafka\u001b[39;00m \u001b[39mimport\u001b[39;00m KafkaProducer\n\u001b[0;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcassandra\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcluster\u001b[39;00m \u001b[39mimport\u001b[39;00m Cluster\n\u001b[0;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcassandra\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mauth\u001b[39;00m \u001b[39mimport\u001b[39;00m PlainTextAuthProvider\n",
+      "File \u001b[1;32mc:\\Users\\anton\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\kafka\\__init__.py:21\u001b[0m\n\u001b[0;32m     16\u001b[0m             \u001b[39mpass\u001b[39;00m\n\u001b[0;32m     18\u001b[0m logging\u001b[39m.\u001b[39mgetLogger(\u001b[39m__name__\u001b[39m)\u001b[39m.\u001b[39maddHandler(NullHandler())\n\u001b[1;32m---> 21\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkafka\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39madmin\u001b[39;00m \u001b[39mimport\u001b[39;00m KafkaAdminClient\n\u001b[0;32m     22\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkafka\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mclient_async\u001b[39;00m \u001b[39mimport\u001b[39;00m KafkaClient\n\u001b[0;32m     23\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkafka\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mconsumer\u001b[39;00m \u001b[39mimport\u001b[39;00m KafkaConsumer\n",
+      "File \u001b[1;32mc:\\Users\\anton\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\kafka\\admin\\__init__.py:4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m__future__\u001b[39;00m \u001b[39mimport\u001b[39;00m absolute_import\n\u001b[0;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkafka\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39madmin\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mconfig_resource\u001b[39;00m \u001b[39mimport\u001b[39;00m ConfigResource, ConfigResourceType\n\u001b[1;32m----> 4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkafka\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39madmin\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mclient\u001b[39;00m \u001b[39mimport\u001b[39;00m KafkaAdminClient\n\u001b[0;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkafka\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39madmin\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39macl_resource\u001b[39;00m \u001b[39mimport\u001b[39;00m (ACL, ACLFilter, ResourcePattern, ResourcePatternFilter, ACLOperation,\n\u001b[0;32m      6\u001b[0m                                       ResourceType, ACLPermissionType, ACLResourcePatternType)\n\u001b[0;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkafka\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39madmin\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnew_topic\u001b[39;00m \u001b[39mimport\u001b[39;00m NewTopic\n",
+      "File \u001b[1;32mc:\\Users\\anton\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\kafka\\admin\\client.py:16\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkafka\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcoordinator\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprotocol\u001b[39;00m \u001b[39mimport\u001b[39;00m ConsumerProtocolMemberMetadata, ConsumerProtocolMemberAssignment, ConsumerProtocol\n\u001b[0;32m     15\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mkafka\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39merrors\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mErrors\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkafka\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39merrors\u001b[39;00m \u001b[39mimport\u001b[39;00m (\n\u001b[0;32m     17\u001b[0m     IncompatibleBrokerVersion, KafkaConfigurationError, NotControllerError,\n\u001b[0;32m     18\u001b[0m     UnrecognizedBrokerVersion, IllegalArgumentError)\n\u001b[0;32m     19\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkafka\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m MetricConfig, Metrics\n\u001b[0;32m     20\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkafka\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprotocol\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39madmin\u001b[39;00m \u001b[39mimport\u001b[39;00m (\n\u001b[0;32m     21\u001b[0m     CreateTopicsRequest, DeleteTopicsRequest, DescribeConfigsRequest, AlterConfigsRequest, CreatePartitionsRequest,\n\u001b[0;32m     22\u001b[0m     ListGroupsRequest, DescribeGroupsRequest, DescribeAclsRequest, CreateAclsRequest, DeleteAclsRequest,\n\u001b[0;32m     23\u001b[0m     DeleteGroupsRequest\n\u001b[0;32m     24\u001b[0m )\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'IncompatibleBrokerVersion' from 'kafka.errors' (c:\\Users\\anton\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\kafka\\errors.py)"
+     ]
+    }
+   ],
    "source": [
     "from kafka import KafkaProducer\n",
     "from cassandra.cluster import Cluster\n",
     "from cassandra.auth import PlainTextAuthProvider\n",
-    "import pandas as pd\n",
-    "import json\n",
     "\n",
     "import tkinter as tk\n",
     "\n",
     "import requests\n",
+    "import json\n",
     "import pandas as pd\n",
     "from requests_html import HTML\n",
     "from requests_html import HTMLSession"
@@ -23,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "0b898482-f222-4c74-87e9-3b62f1d62399",
    "metadata": {},
    "outputs": [],
@@ -42,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "1264d483-0d16-4095-a937-3c4b3832dcd9",
    "metadata": {},
    "outputs": [],
@@ -562,16 +576,8 @@
     "    dfs.append(df)\n",
     "\n",
     "# Fusion des dataFrame en un seul\n",
-    "data = pd.concat(dfs, ignore_index=True)\n"
+    "data = pd.concat(dfs, ignore_index=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc69b25e-3a65-4261-a209-e330ba1e0e82",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -937,7 +943,7 @@
     "        data.loc[i,'description'] = data.loc[i,'description'].split('<![CDATA[')[1].split(']')[0] \n",
     "    else:\n",
     "        data.loc[i,'title'] = data.loc[i,'title']\n",
-    "        data.loc[i,'description'] = data.loc[i,'description']\n"
+    "        data.loc[i,'description'] = data.loc[i,'description']"
    ]
   },
   {
@@ -1421,14 +1427,6 @@
    "source": [
     "delete_data()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a41f87a0-eefd-4cdc-a8c6-ec278fb8d774",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1447,7 +1445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
