--- a/Demo/RSS_data_Demo.ipynb
+++ b/Demo/RSS_data_Demo.ipynb
@@ -388,7 +388,7 @@
     "# Le dataFrame est ensuite stocké dans la base de données Cassandra\n",
     "session.execute(\"CREATE KEYSPACE IF NOT EXISTS your_keyspace WITH REPLICATION = {'class' : 'SimpleStrategy', 'replication_factor' : 1}\")\n",
     "session.execute(\"USE your_keyspace\")\n",
-    "session.execute(\"CREATE TABLE IF NOT EXISTS RSS (title text, pubdate text, link text, description text, PRIMARY KEY(title, pubdate)) WITH CLUSTERING ORDER BY (pubdate DESC)\")\n",
+    "session.execute(\"CREATE TABLE IF NOT EXISTS RSS (title text, pubdate text, link text, description text, PRIMARY KEY(feed_id, pubdate)) WITH CLUSTERING ORDER BY (pubdate DESC)\")\n",
     "\n",
     "for _, row in data.iterrows():\n",
     "    session.execute(f\"INSERT INTO RSS (title, pubdate, link, description) VALUES ('{row['title']}', '{row['pubDate']}', '{row['link']}', '{row['description']}')\")"
