--- a/Demo/RSS_data_Demo.ipynb
+++ b/Demo/RSS_data_Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,28 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['https://www.lemonde.fr/rss/une.xml',\n",
-       " 'https://www.lefigaro.fr/rss/figaro_actualites.xml',\n",
-       " 'https://www.francetvinfo.fr/titres.rss',\n",
-       " 'https://www.ouest-france.fr/rss/une.xml',\n",
-       " 'https://www.20minutes.fr/feeds/rss-une.xml',\n",
-       " 'https://www.bfmtv.com/rss/info/flux-rss/flux-toutes-les-actualites/',\n",
-       " 'https://www.france24.com/fr/rss',\n",
-       " 'https://www.lequipe.fr/rss/actu_rss_Football.xml',\n",
-       " 'https://www.actuia.com/feed/']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Appel de la fonction\n",
     "urls=ouvrir_fenetre()\n",
@@ -149,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,174 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>pubDate</th>\n",
-       "      <th>link</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td></td>\n",
-       "      <td>Fri, 07 Apr 2023 14:35:57 +0200</td>\n",
-       "      <td>https://www.lemonde.fr/societe/article/2023/04...</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td></td>\n",
-       "      <td>Fri, 07 Apr 2023 12:58:00 +0200</td>\n",
-       "      <td>https://www.lemonde.fr/politique/article/2023/...</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td></td>\n",
-       "      <td>Fri, 07 Apr 2023 13:19:43 +0200</td>\n",
-       "      <td>https://www.lemonde.fr/international/article/2...</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td></td>\n",
-       "      <td>Fri, 07 Apr 2023 11:20:10 +0200</td>\n",
-       "      <td>https://www.lemonde.fr/international/live/2023...</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td></td>\n",
-       "      <td>Fri, 07 Apr 2023 06:00:06 +0200</td>\n",
-       "      <td>https://www.lemonde.fr/societe/article/2023/04...</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>246</th>\n",
-       "      <td>Belgique : European AI Week du 27 mars au 31 mars</td>\n",
-       "      <td>Fri, 24 Mar 2023 14:23:37 +0000</td>\n",
-       "      <td>https://www.actuia.com/?p=42834</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247</th>\n",
-       "      <td>AWS et NVIDIA collaborent pour accélérer l’ent...</td>\n",
-       "      <td>Fri, 24 Mar 2023 10:51:40 +0000</td>\n",
-       "      <td>https://www.actuia.com/?p=42822</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>Le Fonds Innovation Défense participe à la lev...</td>\n",
-       "      <td>Wed, 22 Mar 2023 12:00:43 +0000</td>\n",
-       "      <td>https://www.actuia.com/?p=42791</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>Selon le baromètre véhicule autonome VEDECOM &amp;...</td>\n",
-       "      <td>Wed, 22 Mar 2023 11:30:26 +0000</td>\n",
-       "      <td>https://www.actuia.com/?p=42797</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>250</th>\n",
-       "      <td>Génération IA : 1 jeune sur 2 aimerait apprend...</td>\n",
-       "      <td>Wed, 22 Mar 2023 11:00:04 +0000</td>\n",
-       "      <td>https://www.actuia.com/?p=42799</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>251 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 title  \\\n",
-       "0                                                        \n",
-       "1                                                        \n",
-       "2                                                        \n",
-       "3                                                        \n",
-       "4                                                        \n",
-       "..                                                 ...   \n",
-       "246  Belgique : European AI Week du 27 mars au 31 mars   \n",
-       "247  AWS et NVIDIA collaborent pour accélérer l’ent...   \n",
-       "248  Le Fonds Innovation Défense participe à la lev...   \n",
-       "249  Selon le baromètre véhicule autonome VEDECOM &...   \n",
-       "250  Génération IA : 1 jeune sur 2 aimerait apprend...   \n",
-       "\n",
-       "                             pubDate  \\\n",
-       "0    Fri, 07 Apr 2023 14:35:57 +0200   \n",
-       "1    Fri, 07 Apr 2023 12:58:00 +0200   \n",
-       "2    Fri, 07 Apr 2023 13:19:43 +0200   \n",
-       "3    Fri, 07 Apr 2023 11:20:10 +0200   \n",
-       "4    Fri, 07 Apr 2023 06:00:06 +0200   \n",
-       "..                               ...   \n",
-       "246  Fri, 24 Mar 2023 14:23:37 +0000   \n",
-       "247  Fri, 24 Mar 2023 10:51:40 +0000   \n",
-       "248  Wed, 22 Mar 2023 12:00:43 +0000   \n",
-       "249  Wed, 22 Mar 2023 11:30:26 +0000   \n",
-       "250  Wed, 22 Mar 2023 11:00:04 +0000   \n",
-       "\n",
-       "                                                  link description  \n",
-       "0    https://www.lemonde.fr/societe/article/2023/04...              \n",
-       "1    https://www.lemonde.fr/politique/article/2023/...              \n",
-       "2    https://www.lemonde.fr/international/article/2...              \n",
-       "3    https://www.lemonde.fr/international/live/2023...              \n",
-       "4    https://www.lemonde.fr/societe/article/2023/04...              \n",
-       "..                                                 ...         ...  \n",
-       "246                    https://www.actuia.com/?p=42834              \n",
-       "247                    https://www.actuia.com/?p=42822              \n",
-       "248                    https://www.actuia.com/?p=42791              \n",
-       "249                    https://www.actuia.com/?p=42797              \n",
-       "250                    https://www.actuia.com/?p=42799              \n",
-       "\n",
-       "[251 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +211,7 @@
     "# Le dataFrame est ensuite stocké dans la base de données Cassandra\n",
     "session.execute(\"CREATE KEYSPACE IF NOT EXISTS your_keyspace WITH REPLICATION = {'class' : 'SimpleStrategy', 'replication_factor' : 1}\")\n",
     "session.execute(\"USE your_keyspace\")\n",
-    "session.execute(\"CREATE TABLE IF NOT EXISTS RSS (title text, pubdate text, link text, description text, PRIMARY KEY(title, pubdate)) WITH CLUSTERING ORDER BY (pubdate DESC)\")\n",
+    "session.execute(\"CREATE TABLE IF NOT EXISTS RSS (title text, pubdate text, link text, description text, PRIMARY KEY(feed_id, pubdate)) WITH CLUSTERING ORDER BY (pubdate DESC)\")\n",
     "\n",
     "for _, row in data.iterrows():\n",
     "    session.execute(f\"INSERT INTO RSS (title, pubdate, link, description) VALUES ('{row['title']}', '{row['pubDate']}', '{row['link']}', '{row['description']}')\")"
